k8s/base/plantsuite-mes/controlstation/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: controlstation
spec:
  hosts:
    - controlstation.plantsuite.local
  gateways:
    - istio-ingress/gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 8080
            host: controlstation
